--- a/learn/ui/login.html
+++ b/learn/ui/login.html
@@ -19,7 +19,7 @@
             <button type="submit">Login</button>
         </form>
         <p><a href="/forgot-password">Forgot Password?</a></p>
-        <p>Don't have an account? <a href="/signup.html">Sign up here</a></p>
+        <p>Don't have an account? <a href="signup.html">Sign up here</a></p>
     </div>
 </body>
 </html>
