--- a/learn/ui/signup.html
+++ b/learn/ui/signup.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign Up</title>
-    <!-- Link to external CSS -->
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -25,7 +24,7 @@
             
             <button type="submit">Sign Up</button>
         </form>
-        <p>Already have an account? <a href="/login.html">Login here</a></p>
+        <p>Already have an account? <a href="login.html">Login here</a></p>
     </div>
 </body>
 </html>
